--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -27,4 +27,4 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           GH_USERNAME: ${{ secrets.GH_USERNAME }}
           GIST_ID: ${{ secrets.GIST_ID }}
-        run: python main.py
+        run: python src/main.py
